# oneDNN

./: .gitignore  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  MAINTAINERS.md  README.md
.github/: .licenserc.yaml  CODEOWNERS
.github/automation/aarch64/: ci.json
.github/workflows/: bazel-config-smoke.yml  ci-aarch64.yml  ci-riscv.yml  clang-tidy.yml  codeql.yml  nightly-aarch64.yml  performance-aarch64.yml  pr-linter.yml  skywalking-eyes.yml  tensorflow-integration-smoke.yml  weekly-riscv.yml
bazel/: BUILD.bazel  README.md  dnnl_config.bzl  dnnl_config_substitutions.bzl  mkldnn_v1.BUILD
cmake/: ACL.cmake  SDL.cmake  Threadpool.cmake  blas.cmake  configuring_primitive_list.cmake  options.cmake  utils.cmake
doc/graph/fusion_patterns/: gated_mlp.md  gqa.md  sdpa.md
doc/graph/rst/: graph_fusion_patterns.rst
doc/performance_considerations/: dispatcher_control.md
doc/primitives/: batch_normalization.md  binary.md  concat.md  convolution.md  eltwise.md  group_normalization.md  inner_product.md  layer_normalization.md  lrn.md  matmul.md  pooling.md  prelu.md  reduction.md  reorder.md  resampling.md  rnn.md  shuffle.md  softmax.md  sum.md
doc/programming_model/: data_types.md
doc/rst/: orphans.rst
examples/: cnn_inference_f32.c  cnn_inference_f32.cpp  cnn_training_bf16.cpp  cnn_training_f32.cpp  cpu_cnn_training_f32.c  cpu_rnn_inference_f32.cpp  cpu_rnn_inference_int8.cpp  getting_started.cpp  gpu_opencl_interop.cpp  memory_format_propagation.cpp  performance_profiling.cpp
examples/graph/: gated_mlp.cpp  gated_mlp_int4.cpp  gated_mlp_wei_combined.cpp  gqa_training.cpp
examples/primitives/: batch_normalization.cpp  binary.cpp  concat.cpp  convolution.cpp  deconvolution.cpp  eltwise.cpp  sum.cpp
include/oneapi/dnnl/: dnnl.h  dnnl.hpp  dnnl_config.h.in  dnnl_graph.h  dnnl_graph.hpp  dnnl_graph_types.h  dnnl_threadpool_iface.hpp  dnnl_types.h  dnnl_ze.h  dnnl_ze.hpp
scripts/: README.md  generate_bazel_dnnl_substitutions.py
scripts/synthdnn/: environment.yml
scripts/verbose_converter/src/: benchdnn_generator.py
scripts/verbose_converter/tests/: benchdnn_test.py
src/: CMakeLists.txt
src/common/: bfloat16.cpp  c_types_map.hpp  cache_blob_id.cpp  dnnl_debug_autogenerated.cpp  dnnl_thread.hpp  engine.hpp  float4.cpp  float8.cpp  gemm_pd.hpp  gemm_types.hpp  impl_registration.hpp  ittnotify.cpp  ittnotify.hpp  layer_normalization.cpp  matmul.cpp  matmul_pd.hpp  memory.cpp  memory_desc.cpp  memory_desc_wrapper.cpp  memory_desc_wrapper.hpp  memory_tracking.cpp  memory_tracking.hpp  memory_zero_pad.cpp  nstl.hpp  primitive.cpp  primitive.hpp  primitive_attr.cpp  primitive_cache.cpp  primitive_cache.hpp  primitive_cache_test_api.hpp  primitive_desc.hpp  primitive_exec_types.cpp  primitive_exec_types.hpp  primitive_hashing.cpp  primitive_iface.cpp  primitive_serialization.cpp  sdpa_pd.hpp  sdpa_test_iface.cpp  sdpa_test_iface.hpp  sdpa_types.hpp  (+7 more)
src/cpu/: cpu_convolution_list.cpp  cpu_deconvolution_list.cpp  cpu_eltwise_list.cpp  cpu_inner_product_list.cpp  cpu_pooling_list.cpp  cpu_shuffle_list.cpp  cpu_softmax_list.cpp  cpu_stream.hpp  gemm_convolution.cpp  gemm_convolution_utils.cpp  gemm_inner_product.cpp  gemm_inner_product_utils.hpp  gemm_x8s8s32x_convolution.cpp  gemm_x8s8s32x_inner_product.cpp  nchw_pooling.cpp  ncsp_batch_normalization.cpp  nhwc_pooling.cpp  nspc_batch_normalization.cpp  platform.cpp  ref_concat.hpp  ref_deconvolution.cpp  ref_eltwise.cpp  ref_eltwise.hpp  ref_fused_convolution.hpp  ref_pooling.cpp  ref_prelu.cpp  ref_sum.hpp  simple_concat.cpp  simple_layer_normalization.cpp  simple_layer_normalization.hpp  simple_sum.cpp
src/cpu/aarch64/: acl_inner_product.cpp  acl_layer_normalization.cpp  acl_layer_normalization.hpp  acl_utils.cpp  cpu_isa_traits.cpp  (+35 more)
src/gpu/: gpu_gated_mlp_list.cpp  gpu_matmul_list.cpp  gpu_sdpa_list.cpp
tests/: CMakeLists.txt  test_isa_common.hpp  test_thread.cpp  test_thread.hpp
tests/benchdnn/: CMakeLists.txt  dnn_types.cpp  dnn_types.hpp  dnnl_common.cpp  dnnl_common.hpp  dnnl_debug_autogenerated.cpp  dnnl_memory.cpp  dnnl_memory.hpp
tests/gtests/: CMakeLists.txt  dnnl_test_common.hpp  dnnl_test_common_ze.hpp  test_concurrency.cpp  test_env.cpp  test_iface_grouped.cpp  test_iface_primitive_cache.cpp  test_persistent_cache_api.cpp
(+731 files in other folders)
